--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Mecánico de aeronaves pasante</h3>
                             <div class="subheading mb-3">Taller Aeronáutico de Reparación CEDMA S.L.R.</div>
-                            <p>· Remoción, inspección, reparación y reemplazo de componentes de motor alternativo, turborreactores y estructurales en aeronaves de bajo y medio porte bajo supervisión.
-                            · Mantenimiento regular e inspección de motores alternativos, turborreactores y estructura del planeador en aeronaves de bajo y medio porte bajo supervisión.
-                            · Gestión y control de documentos técnicos, órdenes de trabajo y componentes en almacenaje, entre otras labores en oficina técnica.
-                            · Asistencia al personal mecánico en labores complejas y en el orden general del taller, así como en el remolque de las aeronaves en el taller, plataforma o pista.</p>
+                            <p>· Remoción, inspección, reparación y reemplazo de componentes de motor alternativo, turborreactores y estructurales en aeronaves de bajo y medio porte bajo supervisión.<p>
+                            <p>· Mantenimiento regular e inspección de motores alternativos, turborreactores y estructura del planeador en aeronaves de bajo y medio porte bajo supervisión.<p>
+                            <p>· Gestión y control de documentos técnicos, órdenes de trabajo y componentes en almacenaje, entre otras labores en oficina técnica.<p>
+                            <p>· Asistencia al personal mecánico en labores complejas y en el orden general del taller, así como en el remolque de las aeronaves en el taller, plataforma o pista.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mayo 2023 - Junio 2023</span></div>
                     </div>
