--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                     </h1>
                     <div class="subheading mb-5">
                         Técnico Aeronáutico · Zona Oeste, Haedo · (011) 6119-7004 ·
-                        <a href="mailto:name@email.com">santi.buszczak@gmail.com</a>
+                        <a href="mailto:santi.buszczak@gmail.com">santi.buszczak@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Hola! soy Santiago, me fascina la mecánica y aeronáutica. Mi objetivo es seguir aprendiendo y desarrollarme profesionalmente en el rubro. Soy dedicado y organizado en todo trabajo que realize, al mismo tiempo que busco aprender y mejorar mis habilidades en el labor. Y siempre procuro dar una mano y participar en el trabajo en equipo.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/buszczaksantiago/?hl=es"><i class="fab fa-instagram"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
@@ -72,6 +72,16 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mayo 2023 - Junio 2023</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Operador en fabrica</h3>
+                            <div class="subheading mb-3">Tienda de suministros y mayorista Cotillón TA-TE-TI</div>
+                            <p>· Operación de horno de fundicion de cera, maquinas y moldes para la elaboracion de velas.<p>
+                            <p>· Elaboracion artesanal de bengalas, velas, y souvenirs.<p>
+                            <p>· Empaquetado y gestión de mercadería.<p>
+                            <p>· Control de caja y atención al cliente.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"> Diciembre 2022 - Mayo 2023 / Junio 2023 - Presente</span></div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -84,7 +94,7 @@
                             <h3 class="mb-0">I.N.A.C  C.I.A.T.A</h3>
                             <div class="subheading mb-3">Secundario Industrial</div>
                             <div>Graduado en la especialidad de técnico mecánico aeronáutico</div>
-                            <p>GPA:</p>
+                            <p>Promedio: xx</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - 2023</span></div>
                     </div>
@@ -96,8 +106,18 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Habilidades y Conocimientos</h2>
                     <div class="subheading mb-3">Mantenimiento de aeronaves</div>
-                    <div>· Experiencia en el manejo de máquinas-herramientas y reparaciones estructurales mediante remachado, soldadura con electrodo y aplicación de pintura con aerógrafo.
-                    · Mantenimiento de motores alternativos, turborreactores y estructura del planeador.<div>
+                    <div>· Experiencia en el manejo de máquinas-herramientas y reparaciones estructurales mediante remachado, soldadura con electrodo y aplicación de pintura con aerógrafo.<div>
+                    <div>· Mantenimiento de motores alternativos, turborreactores y estructura del planeador.<div>
+                    <div class="subheading mb-3">Teóricos aeronáuticos</div>
+                    <div>· Plantas de poder alternativas y a reacción<div>
+                    <div>· Estructuras de las aeronaves<div>
+                    <div>· Aerodinámica<div>
+                    <div class="subheading mb-3">Vuelo y operación en aeronaves de bajo porte.</div>
+                    <div>· 36 horas de vuelo como estudiante de PPA en aeronaves de bajo porte.<div>
+                    <div class="subheading mb-3">Manuales técnicos y planos</div>
+                    <div>· Dibujo y diseño de planos para componentes en 2D, 3D sólido y malla en software CAD.<div>
+                    <div>· Interpretación de planos.<div>
+                    <div>· Interpretación y uso de manuales técnicos aeronáuticos (AMM, IPC, CMM, TSM, EM, etc.).<div>
                     <div class="subheading mb-3">Software</div>
                     <ul class="fa-ul mb-0">
                         <li>
@@ -135,8 +155,8 @@
                     <h2 class="mb-5">Cursos y Certificaciones</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            Curso Beechcraft King Air 350
-                            Realizado el curso de  conocimiento de la aeronave Beechcraft King Air 350 por C.E.P.A.  (Prefectura Naval Argentina)
+                        <div class="subheading mb-3">Curso Beechcraft King Air 350</div>
+                        <div>Realizado el curso de  conocimiento de la aeronave Beechcraft King Air 350 por C.E.P.A.  (Prefectura Naval Argentina)<div>
                     </ul>
                 </div>
             </section>
