--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
                     <p>Me fascina la aeronáutica y la mecánica. En mi tiempo ocioso, me dedico a dibujar, tocar la batería y armar/pintar modelos a escala de aviones.</p>
-                    <p class="mb-0">sampletext</p>
+                    <p class="mb-0">oooooo</p>
                 </div>
             </section>
             <hr class="m-0" />
