--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <p class="lead mb-5">Hola! soy Santiago, me fascina la mecánica y aeronáutica. Mi objetivo es seguir aprendiendo y desarrollarme profesionalmente en el rubro. Soy dedicado y organizado en todo trabajo que realize, al mismo tiempo que busco aprender y mejorar mis habilidades en el labor. Y siempre procuro dar una mano y participar en el trabajo en equipo.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="<a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img" target="SantiagoBuszczak.pdf">PDF.</a>"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/buszczaksantiago/?hl=es"><i class="fab fa-instagram"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
