--- a/CV.html
+++ b/CV.html
@@ -1,1 +1,1 @@
-<a href="yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak.pdf" target="_blank">PDF.</a>
+<a href="yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak.jpg"/a>
