--- a/CV.html
+++ b/CV.html
@@ -1,1 +1,1 @@
-<a href="yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak.jpg"/a>
+<a href=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak.jpg width="100%" height="850px"/>
