--- a/CV.html
+++ b/CV.html
@@ -1,1 +1,1 @@
-<a href=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak.jpg width="100%" height="850px"/>
+<a embed src=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak.jpg width="100%" height="850px"/>
