--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <p class="lead mb-5">Hola! soy Santiago, me fascina la mecánica y aeronáutica. Mi objetivo es seguir aprendiendo y desarrollarme profesionalmente en el rubro. Soy dedicado y organizado en todo trabajo que realize, al mismo tiempo que busco aprender y mejorar mis habilidades en el labor. Y siempre procuro dar una mano y participar en el trabajo en equipo.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak.jpg width="100%" height="850px" target="_blank">CV.</a>
+                        <a class="social-icon" href=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak.jpg width="100%" height="850px" target="_blank">CV</a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/buszczaksantiago/?hl=es"><i class="fab fa-instagram"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -94,7 +94,7 @@
                             <h3 class="mb-0">I.N.A.C  C.I.A.T.A</h3>
                             <div class="subheading mb-3">Secundario Industrial</div>
                             <div>Graduado en la especialidad de técnico mecánico aeronáutico</div>
-                            <p>Promedio: xx</p>
+                            <p>Promedio: Pendiente</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - 2023</span></div>
                     </div>
@@ -145,7 +145,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
                     <p>Me fascina la aeronáutica y la mecánica. En mi tiempo ocioso, me dedico a dibujar, tocar la batería y armar/pintar modelos a escala de aviones.</p>
-                    <p class="mb-0">oooooo</p>
+                    <p class="mb-0">...</p>
                 </div>
             </section>
             <hr class="m-0" />
