--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
                     <h2 class="mb-5">Experiencia</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Mecánico de aeronaves pasante</h3>
+                            <h3 class="mb-0">Mecánico de aeronaves pasante (part-time)</h3>
                             <div class="subheading mb-3">Taller Aeronáutico de Reparación CEDMA S.L.R.</div>
                             <p>· Remoción, inspección, reparación y reemplazo de componentes de motor alternativo, turborreactores y estructurales en aeronaves de bajo y medio porte bajo supervisión.<p>
                             <p>· Mantenimiento regular e inspección de motores alternativos, turborreactores y estructura del planeador en aeronaves de bajo y medio porte bajo supervisión.<p>
                             <p>· Gestión y control de documentos técnicos, órdenes de trabajo y componentes en almacenaje, entre otras labores en oficina técnica.<p>
                             <p>· Asistencia al personal mecánico en labores complejas y en el orden general del taller, así como en el remolque de las aeronaves en el taller, plataforma o pista.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Mayo 2023 - Junio 2023</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Operador en fabrica</h3>
+                            <h3 class="mb-0">Operador en fabrica (part-time)</h3>
                             <div class="subheading mb-3">Tienda de suministros y mayorista Cotillón TA-TE-TI</div>
                             <p>· Operación de horno de fundicion de cera, maquinas y moldes para la elaboracion de velas.<p>
                             <p>· Elaboracion artesanal de bengalas, velas, y souvenirs.<p>
                             <p>· Empaquetado y gestión de mercadería.<p>
                             <p>· Control de caja y atención al cliente.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> Diciembre 2022 - Mayo 2023 / Junio 2023 - Presente</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022 - Presente</span></div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -157,6 +157,10 @@
                         <li>
                         <div class="subheading mb-3">Curso Beechcraft King Air 350</div>
                         <div>Realizado el curso de  conocimiento de la aeronave Beechcraft King Air 350 por C.E.P.A.  (Prefectura Naval Argentina)<div>
+                        <div class="subheading mb-3">Capacitación de Gestión de seguridad operacional SMS</div>
+                        <div>Cumplido el módulo básico de capacitación sobre gestión de seguridad operacional SMS (Safesty Management System) ofrecido por T.A.R. CEDMA S.R.L.
+                        <div class="subheading mb-3">Reconocimiento de participacion y esfuerzo</div>
+                        <div>Recibido el reconocimiento por destacada participación y gran esfuerzo en las prácticas profesionalizantes, ofrecido por T.A.R. CEDMA S.R.L.<div>
                     </ul>
                 </div>
             </section>
