--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
                     <p class="lead mb-5">Hola! soy Santiago, me fascina la mecánica y aeronáutica. Mi objetivo es seguir aprendiendo y desarrollarme profesionalmente en el rubro. Soy dedicado y organizado en todo trabajo que realize, al mismo tiempo que busco aprender y mejorar mis habilidades en el labor. Y siempre procuro dar una mano y participar en el trabajo en equipo.</p>
                     <div class="social-icons">
                         <a class="social-icon" href=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak2.pdf width="100%" height="850px" target="_blank">CV</a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/buszczaksantiago/?hl=es"><i class="fab fa-instagram"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -108,36 +106,36 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Habilidades y Conocimientos</h2>
-                    <div class="subheading mb-3">Mantenimiento de aeronaves</div>
+                    <div> class="subheading mb-3">Mantenimiento de aeronaves</div>
                     <div>· Experiencia en el manejo de máquinas-herramientas y reparaciones estructurales mediante remachado, soldadura con electrodo y aplicación de pintura con aerógrafo.<div>
                     <div>· Mantenimiento de motores alternativos, turborreactores y estructura del planeador.<div>
-                    <div class="subheading mb-3">Teóricos aeronáuticos</div>
+                    <div> class="subheading mb-3">Teóricos aeronáuticos</div>
                     <div>· Plantas de poder alternativas y a reacción<div>
                     <div>· Estructuras de las aeronaves<div>
                     <div>· Aerodinámica<div>
-                    <div class="subheading mb-3">Vuelo y operación en aeronaves de bajo porte.</div>
+                    <div> class="subheading mb-3">Vuelo y operación en aeronaves de bajo porte.</div>
                     <div>· 36 horas de vuelo como estudiante de PPA en aeronaves de bajo porte.<div>
-                    <div class="subheading mb-3">Manuales técnicos y planos</div>
+                    <div> class="subheading mb-3">Manuales técnicos y planos</div>
                     <div>· Dibujo y diseño de planos para componentes en 2D, 3D sólido y malla en software CAD.<div>
                     <div>· Interpretación de planos.<div>
                     <div>· Interpretación y uso de manuales técnicos aeronáuticos (AMM, IPC, CMM, TSM, EM, etc.).<div>
-                    <div class="subheading mb-3">Software</div>
+                    <div> class="subheading mb-3">Software</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                           AutoCAD
+                           AutoCAD <progress value="70" max="100"> </progress>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            SolidWorks
+                            SolidWorks <progress value="50" max="100"> </progress>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Paquete Office
+                            Paquete Office <progress value="70" max="100"> </progress>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Drive, Skype, Teams, Zoom y demás plataformas
+                            Drive, Skype, Teams, Zoom y demás plataformas <progress value="100" max="100"> </progress>
                         </li>
                     </ul>
                 </div>
@@ -158,12 +156,17 @@
                     <h2 class="mb-5">Cursos y Certificaciones</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                        <div class="subheading mb-3">Curso Beechcraft King Air 350</div>
+                        <div> class="subheading mb-3">Curso Beechcraft King Air 350</div>
                         <div>Realizado el curso de  conocimiento de la aeronave Beechcraft King Air 350 por C.E.P.A.  (Prefectura Naval Argentina)<div>
-                        <div class="subheading mb-3">Capacitación de Gestión de seguridad operacional SMS</div>
-                        <div>Cumplido el módulo básico de capacitación sobre gestión de seguridad operacional SMS (Safesty Management System) ofrecido por T.A.R. CEDMA S.R.L.
-                        <div class="subheading mb-3">Reconocimiento de participacion y esfuerzo</div>
-                        <div>Recibido el reconocimiento por destacada participación y gran esfuerzo en las prácticas profesionalizantes, ofrecido por T.A.R. CEDMA S.R.L.<div>
+                        <div><img src=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/kingair350.jpg alt="prefecturaqr" idth="120" height="120"><div>
+                        <div><a href="https://certificadosdedu.prefecturanaval.gob.ar/pna_cert/index.php?estado=2&id=DNI46030016_58348">Validación de Certificado</a>
+                        <div> class="subheading mb-3">Capacitación de Gestión de seguridad operacional SMS</div>
+                        <div>Cumplido el módulo básico de capacitación sobre gestión de seguridad operacional SMS (Safesty Management System) ofrecido por T.A.R. CEDMA S.R.L.<div>
+                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/sms.jpg">Validación de Certificado</a>
+                        <div> class="subheading mb-3">Reconocimiento de participacion y esfuerzo</div>
+                        <div>Recibido el reconocimiento por destacada participación y gran esfuerzo en las rácticas profesionalizantes, ofrecido por T.A.R. CEDMA S.R.L.<div>
+                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/cedma.jpg">Validación de Certificado</a>
+                            
                     </ul>
                 </div>
             </section>
