--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <meta name="author" content="Santiago Buszczak" />
+        <title>Portfolio Santiago Buszczak</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Buszczak Santiago</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="fotoperfil" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -106,20 +106,20 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Habilidades y Conocimientos</h2>
-                    <div> class="subheading mb-3">Mantenimiento de aeronaves</div>
+                    <div class="subheading mb-3">Mantenimiento de aeronaves</div>
                     <div>· Experiencia en el manejo de máquinas-herramientas y reparaciones estructurales mediante remachado, soldadura con electrodo y aplicación de pintura con aerógrafo.<div>
                     <div>· Mantenimiento de motores alternativos, turborreactores y estructura del planeador.<div>
-                    <div> class="subheading mb-3">Teóricos aeronáuticos</div>
+                    <div class="subheading mb-3">Teóricos aeronáuticos</div>
                     <div>· Plantas de poder alternativas y a reacción<div>
                     <div>· Estructuras de las aeronaves<div>
                     <div>· Aerodinámica<div>
-                    <div> class="subheading mb-3">Vuelo y operación en aeronaves de bajo porte.</div>
+                    <div class="subheading mb-3">Vuelo y operación en aeronaves de bajo porte.</div>
                     <div>· 36 horas de vuelo como estudiante de PPA en aeronaves de bajo porte.<div>
-                    <div> class="subheading mb-3">Manuales técnicos y planos</div>
+                    <div class="subheading mb-3">Manuales técnicos y planos</div>
                     <div>· Dibujo y diseño de planos para componentes en 2D, 3D sólido y malla en software CAD.<div>
                     <div>· Interpretación de planos.<div>
                     <div>· Interpretación y uso de manuales técnicos aeronáuticos (AMM, IPC, CMM, TSM, EM, etc.).<div>
-                    <div> class="subheading mb-3">Software</div>
+                    <div class="subheading mb-3">Software</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -156,14 +156,14 @@
                     <h2 class="mb-5">Cursos y Certificaciones</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                        <div> class="subheading mb-3">Curso Beechcraft King Air 350</div>
+                        <div class="subheading mb-3">Curso Beechcraft King Air 350</div>
                         <div>Realizado el curso de  conocimiento de la aeronave Beechcraft King Air 350 por C.E.P.A.  (Prefectura Naval Argentina)<div>
                         <div><img src=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/kingair350.jpg alt="prefecturaqr" idth="120" height="120"><div>
                         <div><a href="https://certificadosdedu.prefecturanaval.gob.ar/pna_cert/index.php?estado=2&id=DNI46030016_58348">Validación de Certificado</a>
-                        <div> class="subheading mb-3">Capacitación de Gestión de seguridad operacional SMS</div>
+                        <div class="subheading mb-3">Capacitación de Gestión de seguridad operacional SMS</div>
                         <div>Cumplido el módulo básico de capacitación sobre gestión de seguridad operacional SMS (Safesty Management System) ofrecido por T.A.R. CEDMA S.R.L.<div>
                         <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/sms.jpg">Validación de Certificado</a>
-                        <div> class="subheading mb-3">Reconocimiento de participacion y esfuerzo</div>
+                        <div class="subheading mb-3">Reconocimiento de participacion y esfuerzo</div>
                         <div>Recibido el reconocimiento por destacada participación y gran esfuerzo en las rácticas profesionalizantes, ofrecido por T.A.R. CEDMA S.R.L.<div>
                         <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/cedma.jpg">Validación de Certificado</a>
                             
