--- a/CV.html
+++ b/CV.html
@@ -1,1 +1,6 @@
-<a embed src=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak.jpg width="100%" height="850px"/>
+ <!DOCTYPE html>
+<html>
+<body>
+<a embed src=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak2.pdf width="100%" height="850px"/>
+</body>
+</html> 
