--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                             <div class="subheading mb-3">Secundario Industrial</div>
                             <div>Graduado en la especialidad de técnico mecánico aeronáutico</div>
                             <p>Promedio: Pendiente</p>
+                            <img src=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/Diploma.pdf alt=Diploma style="width:900px;height:700px;">
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - 2023</span></div>
                     </div>
@@ -160,12 +161,13 @@
                         <div>Realizado el curso de  conocimiento de la aeronave Beechcraft King Air 350 por C.E.P.A.  (Prefectura Naval Argentina)<div>
                         <div><img src=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/kingair350.jpg alt="prefecturaqr" idth="120" height="120"><div>
                         <div><a href="https://certificadosdedu.prefecturanaval.gob.ar/pna_cert/index.php?estado=2&id=DNI46030016_58348">Validación de Certificado</a>
+                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/kingair350diploma.pdf">Certificado</a>
                         <div class="subheading mb-3">Capacitación de Gestión de seguridad operacional SMS</div>
                         <div>Cumplido el módulo básico de capacitación sobre gestión de seguridad operacional SMS (Safesty Management System) ofrecido por T.A.R. CEDMA S.R.L.<div>
-                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/sms.jpg">Validación de Certificado</a>
+                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/sms.pdf">Validación de Certificado</a>
                         <div class="subheading mb-3">Reconocimiento de participacion y esfuerzo</div>
                         <div>Recibido el reconocimiento por destacada participación y gran esfuerzo en las rácticas profesionalizantes, ofrecido por T.A.R. CEDMA S.R.L.<div>
-                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/cedma.jpg">Validación de Certificado</a>
+                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/cedma.pdf">Validación de Certificado</a>
                             
                     </ul>
                 </div>
