--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <div class="subheading mb-3">Secundario Industrial</div>
                             <div>Graduado en la especialidad de técnico mecánico aeronáutico</div>
                             <p>Promedio: Pendiente</p>
-                            <img src=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/Diploma.pdf alt=Diploma style="width:900px;height:700px;">
+                            <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/Diploma.pdf">Diploma</a>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - 2023</span></div>
                     </div>
