--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                         <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/kingair350diploma.pdf">Certificado</a>
                         <div class="subheading mb-3">Capacitación de Gestión de seguridad operacional SMS</div>
                         <div>Cumplido el módulo básico de capacitación sobre gestión de seguridad operacional SMS (Safesty Management System) ofrecido por T.A.R. CEDMA S.R.L.<div>
-                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/sms.pdf">Validación de Certificado</a>
+                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/sms.pdf">Certificado</a>
                         <div class="subheading mb-3">Reconocimiento de participacion y esfuerzo</div>
                         <div>Recibido el reconocimiento por destacada participación y gran esfuerzo en las rácticas profesionalizantes, ofrecido por T.A.R. CEDMA S.R.L.<div>
-                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/cedma.pdf">Validación de Certificado</a>
+                        <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/cedma.pdf">Certificado</a>
                             
                     </ul>
                 </div>
