--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Acerca de mí</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educacion</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educación</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Intereses</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Cursos</a></li>
@@ -50,7 +50,7 @@
                         Técnico Aeronáutico · Zona Oeste, Haedo · (011) 6119-7004 ·
                         <a href="mailto:santi.buszczak@gmail.com">santi.buszczak@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Hola! soy Santiago, me fascina la mecánica y aeronáutica. Mi objetivo es seguir aprendiendo y desarrollarme profesionalmente en el rubro. Soy dedicado y organizado en todo trabajo que realize, al mismo tiempo que busco aprender y mejorar mis habilidades en el labor. Y siempre procuro dar una mano y participar en el trabajo en equipo.</p>
+                    <p class="lead mb-5">Hola, soy Santiago, apasionado por la mecánica y la aeronáutica. Mi objetivo es seguir aprendiendo y desarrollarme profesionalmente en este fascinante rubro. Soy una persona dedicada y organizada en cada trabajo que realizo. Busco constantemente aprender y mejorar mis habilidades laborales. Además, me considero un colaborador activo, siempre dispuesto a dar una mano y participar en el trabajo en equipo.</p>
                     <div class="social-icons">
                         <a class="social-icon" href=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak2.pdf width="100%" height="850px" target="_blank">CV</a>
                         <a class="social-icon" href="https://www.instagram.com/buszczaksantiago/?hl=es"><i class="fab fa-instagram"></i></a>
@@ -94,9 +94,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">I.N.A.C  C.I.A.T.A</h3>
                             <div class="subheading mb-3">Secundario Industrial</div>
-                            <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/Diploma.pdf">Diploma</a>
                             <div>Graduado en la especialidad de técnico mecánico aeronáutico</div>
-                            <p>Promedio: Pendiente</p>
+                            <a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/Diploma.pdf">Diploma</a>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - 2023</span></div>
                     </div>
@@ -110,16 +109,20 @@
                     <div class="subheading mb-3">Mantenimiento de aeronaves</div>
                     <div>· Experiencia en el manejo de máquinas-herramientas y reparaciones estructurales mediante remachado, soldadura con electrodo y aplicación de pintura con aerógrafo.<div>
                     <div>· Mantenimiento de motores alternativos, turborreactores y estructura del planeador.<div>
+                    <br>
                     <div class="subheading mb-3">Teóricos aeronáuticos</div>
                     <div>· Plantas de poder alternativas y a reacción<div>
                     <div>· Estructuras de las aeronaves<div>
                     <div>· Aerodinámica<div>
+                    <br>
                     <div class="subheading mb-3">Vuelo y operación en aeronaves de bajo porte.</div>
                     <div>· 36 horas de vuelo como estudiante de PPA en aeronaves de bajo porte.<div>
+                    <br>
                     <div class="subheading mb-3">Manuales técnicos y planos</div>
                     <div>· Dibujo y diseño de planos para componentes en 2D, 3D sólido y malla en software CAD.<div>
                     <div>· Interpretación de planos.<div>
                     <div>· Interpretación y uso de manuales técnicos aeronáuticos (AMM, IPC, CMM, TSM, EM, etc.).<div>
+                    <br>
                     <div class="subheading mb-3">Software</div>
                     <ul class="fa-ul mb-0">
                         <li>
