--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Operador en fabrica (part-time)</h3>
                             <div class="subheading mb-3">Tienda de suministros y mayorista Cotillón TA-TE-TI</div>
-                            <p>· Operación de horno de fundicion de cera, maquinas y moldes para la elaboracion de velas.<p>
-                            <p>· Elaboracion artesanal de bengalas, velas, y souvenirs.<p>
+                            <p>· Operación de horno de fundición de cera, máquinas y moldes para la elaboración de velas.<p>
+                            <p>· Elaboración artesanal de bengalas, velas, y souvenirs.<p>
                             <p>· Empaquetado y gestión de mercadería.<p>
                             <p>· Control de caja y atención al cliente.</p>
                         </div>
@@ -165,11 +165,11 @@
                         <div><img src=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/kingair350.jpg alt="prefecturaqr" idth="120" height="120"><div>
                         <div><a href="https://certificadosdedu.prefecturanaval.gob.ar/pna_cert/index.php?estado=2&id=DNI46030016_58348">Validación de Certificado</a>
                         <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/kingair350diploma.pdf">Certificado</a>
-                        <div class="subheading mb-3">Capacitación de Gestión de seguridad operacional SMS</div>
-                        <div>Cumplido el módulo básico de capacitación sobre gestión de seguridad operacional SMS (Safesty Management System) ofrecido por T.A.R. CEDMA S.R.L.<div>
+                        <div class="subheading mb-3">Capacitación en Gestión de Seguridad Operacional (SMS).</div>
+                        <div>Cumplido el módulo básico de capacitación sobre gestión de seguridad operacional SMS (Safety Management System), ofrecido por T.A.R. CEDMA S.R.L.<div>
                         <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/sms.pdf">Certificado</a>
-                        <div class="subheading mb-3">Reconocimiento de participacion y esfuerzo</div>
-                        <div>Recibido el reconocimiento por destacada participación y gran esfuerzo en las rácticas profesionalizantes, ofrecido por T.A.R. CEDMA S.R.L.<div>
+                        <div class="subheading mb-3">Reconocimiento de la participación y esfuerzo.</div>
+                        <div>Recibido el reconocimiento por destacada participación y gran esfuerzo en las prácticas profesionalizantes, ofrecido por T.A.R. CEDMA S.R.L.<div>
                         <div><a href="https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/cedma.pdf">Certificado</a>
                             
                     </ul>
