--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educación</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Intereses</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Cursos</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Intereses</a></li>
+
                 </ul>
             </div>
         </nav>
@@ -107,9 +108,9 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Habilidades y Conocimientos</h2>
                     <div class="subheading mb-3">Mantenimiento de aeronaves</div>
-                    <div>· Experiencia en el manejo de máquinas-herramientas y reparaciones estructurales mediante remachado, soldadura con electrodo y aplicación de pintura con aerógrafo.<div>
-                    <div>· Mantenimiento de motores alternativos, turborreactores y estructura del planeador.<div>
-                    <br>
+                    <div>· Experiencia en el manejo de máquinas-herramientas y reparaciones estructurales mediante remachado, soldadura con electrodo y aplicación de pintura con aerógrafo: Reparaciones de estructurales sobre BAC 1-11 Serie 500 y Beechcraft C-45H. <div>
+                    <div>· Experiencia en el mantenimiento de areonaves: Mantenimiento sobre Lear Jet 35, Metro 2, Boeing 737 Serie 200, BAC 1-11 Serie 500, Turbo Commander, Piper PA-24 "Comanche", PA-30 "Twin comanche", Cessna 152, 172, 206 y 210, PA-38 Tomahawk, Mooney M20, y Ultraliviano "Pegasus".<div>
+                    <div>· Experiencia en el mantenimiento de motores alternativos, turborreactores y componentes de plantas de poder: Mantenimiento sobre O-470 13A, Lycoming IGSO 540, Lycoming R-680, Marboré 2, Pratt & Whitney JT8D-9A y PTE-331.<div>
                     <div class="subheading mb-3">Teóricos aeronáuticos</div>
                     <div>· Plantas de poder alternativas y a reacción<div>
                     <div>· Estructuras de las aeronaves<div>
@@ -145,15 +146,6 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Intereses</h2>
-                    <p>Me fascina la aeronáutica y la mecánica. En mi tiempo ocioso, me dedico a dibujar, tocar la batería y armar/pintar modelos a escala de aviones.</p>
-                    <p class="mb-0">...</p>
-                </div>
-            </section>
-            <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
@@ -175,6 +167,15 @@
                     </ul>
                 </div>
             </section>
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Intereses</h2>
+                    <p>Me fascina la aeronáutica y la mecánica. En mi tiempo ocioso, me dedico a dibujar, tocar la batería y armar/pintar modelos a escala de aviones.</p>
+                    <p class="mb-0">...</p>
+                </div>
+            </section>
+            <hr class="m-0" />
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
