--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            SolidWorks <progress value="20" max="100"> </progress>
+                            SolidWorks <progress value="30" max="100"> </progress>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -174,8 +174,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
-                    <p>Me fascina la aeronáutica y la mecánica. En mi tiempo ocioso, me dedico a dibujar, tocar la batería y armar/pintar modelos a escala de aviones.</p>
-                    <p class="mb-0">...</p>
+                    <p>Me fascina la aeronáutica y la mecánica, Suelo realizar unas pocas horas de vuelo de vez en cuando y me gusta  En mi tiempo ocioso, me dedico a dibujar, tocar la batería y armar/pintar modelos a escala de aviones.</p>
+                    <p class="mb-0"></p>
                 </div>
             </section>
             <hr class="m-0" />
