--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
-                    <p>Me fascina la aeronáutica y la mecánica, Suelo realizar unas pocas horas de vuelo de vez en cuando y me gusta  En mi tiempo ocioso, me dedico a dibujar, tocar la batería y armar/pintar modelos a escala de aviones.</p>
+                    <p>Me fascina la aeronáutica y la mecánica, Suelo realizar unas pocas horas de vuelo de vez en cuando y me gusta meter mano en componentes mecanicos y, a veces, electronicos. En mi tiempo ocioso, me dedico a dibujar, tocar la batería y armar/pintar modelos a escala de aviones.</p>
                     <p class="mb-0"></p>
                 </div>
             </section>
