--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         Técnico Aeronáutico · Zona Oeste, Haedo · (011) 6119-7004 ·
                         <a href="mailto:santi.buszczak@gmail.com">santi.buszczak@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Hola, soy Santiago, apasionado por la mecánica y la aeronáutica. Mi objetivo es seguir aprendiendo y desarrollarme profesionalmente en este fascinante rubro. Soy una persona dedicada y organizada en cada trabajo que realizo. Busco constantemente aprender y mejorar mis habilidades laborales. Además, me considero un colaborador activo, siempre dispuesto a dar una mano y participar en el trabajo en equipo.</p>
+                    <p class="lead mb-5">Hola, soy Santiago, apasionado por la mecánica y la aeronáutica. Mi objetivo es seguir aprendiendo y desarrollarme profesionalmente en este fascinante rubro. Soy una persona dedicada y organizada en cada trabajo que realizo. Busco constantemente aprender y mejorar mis habilidades laborales. Además, me considero un colaborador activo, resolutivo y me desenvuelvo bien trabajando en equipo.</p>
                     <div class="social-icons">
                         <a class="social-icon" href=https://yackmiller.github.io/Portfolio_Santiago_Buszcak/assets/img/SantiagoBuszczak2.pdf width="100%" height="850px" target="_blank">CV</a>
                         <a class="social-icon" href="https://www.instagram.com/buszczaksantiago/?hl=es"><i class="fab fa-instagram"></i></a>
